# collatz_cli

./: .gitignore  CMakeLists.txt  README.md
src/: common.cpp  common.h  handle_input.cpp  handle_input.h  main.cpp  number_search.h  number_search_optimized.cpp  number_search_optimized.h  number_search_simple.cpp
